# CXX-yLab

./: CMakeLists.txt  CXXMakefile  README.md  lfu.cpp  lfu.hpp  lfutests.sh  main.cpp
cache/: Makefile
cache/src/head/: lfu.hpp
ideal_cache/: Makefile  idealtests.sh
ideal_cache/src/code/: main.cpp
ideal_cache/src/head/: ideal.hpp
ideal_cache/src/include/: ideal.hpp
lfu_cache/: Makefile  lfutests.sh
lfu_cache/src/code/: main.cpp
lfu_cache/src/head/: lfu.hpp
lfu_cache/src/include/: lfu.hpp
